Fix mobile badge layout: position relative on .timeline-step and increase mobile padding-left

--- a/index.html
+++ b/index.html
@@ -764,6 +764,7 @@
     .timeline-step {
       padding: 32px 32px 32px 88px;
       overflow: visible;
+      position: relative;
     }
 
     .timeline-step::before {
@@ -987,7 +988,7 @@
       .first-lead { padding: 72px 0 52px; margin-top: 0; }
       .timeline { padding-left: 0; }
       .timeline::before { display: none; }
-      .timeline-step { padding: 28px 28px 28px 52px; }
+      .timeline-step { padding: 28px 28px 28px 72px; }
       .timeline-step::before {
         content: counter(timeline);
         left: 12px;
