Fix avatar overflow on small screens

--- a/index.html
+++ b/index.html
@@ -654,8 +654,8 @@
     }
 
     .avatar {
-      width: 260px;
-      height: 260px;
+      width: clamp(160px, 45vw, 260px);
+      height: clamp(160px, 45vw, 260px);
       border-radius: 50%;
       padding: 0;
       background: rgba(255, 255, 255, 0.95);
